更新 gRPC 和 HTTP 服务器的中间件配置，修正元数据中间件的引用，确保使用服务器端的元数据中间件。同时，新增 HTTP 服务器的配置项，包括日志、恢复、追踪、验证等中间件的启用选项，以及 CORS 配置。

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,7 +1,37 @@
 server:
   http:
+    network: "tcp"
     addr: 0.0.0.0:8000
     timeout: 6s
+    middleware:
+      enableLogging: true
+      enableRecovery: true
+      enableTracing: true
+      enableMetadata: true
+      enableValidate: true
+      enableCircuitBreaker: true
+      enableRateLimiter: true
+      enableMetrics: true
+      limiter:
+        window: 1s
+        bucket: 100
+        cpuThreshold: 80
+      metrics:
+        histogram: true
+        counter: true
+        gauge: true
+        summary: true
+    cors:
+      headers:
+        - "Content-Type"
+        - "Authorization"
+      methods:
+        - "GET"
+        - "POST"
+      origins:
+        - "*"
+      enableCors: true
+      enablePprof: true
   grpc:
     addr: 0.0.0.0:9000
     timeout: 6s
