更新 Logger 结构，移除阿里云和腾讯的日志配置，简化 protobuf 定义。同时，调整 gRPC 和 HTTP 服务器的中间件配置，确保使用新的配置方法，增强代码的可读性和一致性。新增日志配置示例至 config.yaml 文件。

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -50,6 +50,14 @@ data:
     dialTimeout: 1s
     readTimeout: 0.4s
     writeTimeout: 0.6s
+logger:
+  type: "std"
+  zap:
+    filename: "logs/kratos.log"
+    level: "debug"
+    maxSize: 100
+    maxAge: 10
+    maxBackups: 10
 trace:
   batcher: "otlphttp"
   endpoint: "0.0.0.0:55681"
