Update configuration to use APP_ENV variable instead of GO_ENV
This commit modifies the LoadConfig function to reference the APP_ENV environment variable for loading the configuration file. Additionally, the example configuration file is updated to reflect this change, ensuring consistency across the application.

--- a/configs/config.example.yaml
+++ b/configs/config.example.yaml
@@ -1,5 +1,5 @@
 name: "kratos" # 服务名称
-env: ${GO_ENV} # 环境
+env: ${APP_ENV} # 环境
 server: # 服务配置
   http: # HTTP服务配置
     network: "tcp" # 网络类型 tcp, unix
